<resources>
    <string name="app_name">Fitness coach</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="confirmar_pass">Confirmar contraseña</string>
    <string name="perfil">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiarFoto">Cambiar foto</string>
    <string name="ActivarNotificaciones">Activar notificaciones</string>
    <string name="Usuario">Usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="noRegistrado">¿No tienes cuenta? Registrate</string>
    <string name="red">Red</string>
    <string name="indigo">Indigo</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>>
    <string name="grey">Grey</string>
    <string name="bluegrey">Blue Grey</string>
    <string name="amber">Amber</string>
    <string name="teal">Teal</string>
    <string name="deeppurple">Deep Purple</string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Ejercicios">Ejercicios</string>
    <string name="rutina">Rutina</string>
    <string name="BorrarDatos">Borrar datos</string>
    <string name="Update">Cambiar datos</string>
    <string name="contrasena">Contraseña</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="take_photo">Tomar una foto</string>
    <string name="start_capture">Empezar a grabar</string>
    <string name="stop_capture">parar de grabar</string>
    <string name="Read">Mostrar datos</string>
    <string name="nuevaContraseña">Nueva contraseña</string>
    <string name="NuevoNombre">Nuevo nombre de usuario</string>
    <string name="intermedio">INTERMEDIO</string>
    <string name="avanzado">AVANZADO</string>
    <string name="Empezar">EMPEZAR</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Inicio">Inicio</string>
    <string name="Principiante">Principiante</string>
    <string name="Nombre">Nombre</string>

</resources>