<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layoutDescription="@xml/register_scene"
    tools:context=".activities.RegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/menelaokino"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrarse"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/greek_freak"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/usernameEdit"
        android:hint="@string/nombre_de_usuario"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/greek_freak"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/emailEdit"
        android:hint="@string/correo_electronico"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/greek_freak"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/greek_freak"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/confirmEdit"
        android:hint="@string/confirmar_pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/greek_freak"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:text="Registrate"
        android:layout_marginTop="40dp"
        android:onClick="btnRegistrar"
        style="@style/ButtonStyle"
        android:fontFamily="@font/greek_freak"
        android:textSize="30dp"/>

</LinearLayout>